manifests/acm-observability-namspace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-cluster-management-observability 
  labels:
    name: open-cluster-management-observability
    openshift.io/cluster-monitoring: "true"
