manifests/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: open-cluster-management-observability
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
    name: api
  - port: 9090
    protocol: TCP
    targetPort: 9090
    name: console
  selector:
    app.kubernetes.io/name: minio
