manifests/user-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metrics-server
  name: metrics-server
  namespace: user-metrics
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: metrics-server
  type: ClusterIP
